// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "aircraft_registration": "OH-STL",
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "captain": "Virtanen",
  "copilot": "Nieminen",
  "created_at": Any<Date>,
  "created_by": "user1",
  "departure_airport": "EFHK",
  "flight_date": "2025-02-28T22:00:00.000Z",
  "flight_id": 1,
  "flight_type": "Training",
  "fuel_uplift_litres": "50.00",
  "instrument_hours": "00:45:00",
  "invoice_number": "INV001",
  "is_billed": true,
  "landing_time_utc": "10:00:00",
  "night_hours": "00:30:00",
  "number_of_landings": 1,
  "off_block_time_utc": "08:15:00",
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": "08:00:00",
  "persons_on_board": 4,
  "remarks": "Smooth flight",
  "takeoff_time_utc": "08:30:00",
  "updated_at": Any<Date>,
  "updated_by": "user1",
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "0": {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": "2025-02-28T22:00:00.000Z",
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user1",
  },
  "1": {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFTP",
    "billable_member_id": 3,
    "billing_remarks": "N/A",
    "captain": "Lahtinen",
    "copilot": "Koskinen",
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user2",
    "departure_airport": "EFHK",
    "flight_date": "2025-03-01T22:00:00.000Z",
    "flight_id": 2,
    "flight_type": "Commercial",
    "fuel_uplift_litres": "60.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV002",
    "is_billed": true,
    "landing_time_utc": "11:00:00",
    "night_hours": "00:45:00",
    "number_of_landings": 2,
    "off_block_time_utc": "09:10:00",
    "oil_uplift_litres": "2.00",
    "on_block_time_utc": "09:00:00",
    "persons_on_board": 2,
    "remarks": "Training flight",
    "takeoff_time_utc": "09:20:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user2",
  },
  "2": {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "captain": "Salminen",
    "copilot": null,
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user3",
    "departure_airport": "EFHK",
    "flight_date": "2025-03-02T22:00:00.000Z",
    "flight_id": 3,
    "flight_type": "Private",
    "fuel_uplift_litres": "40.00",
    "instrument_hours": "00:30:00",
    "invoice_number": null,
    "is_billed": false,
    "landing_time_utc": "12:00:00",
    "night_hours": "00:20:00",
    "number_of_landings": 1,
    "off_block_time_utc": "10:20:00",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "10:00:00",
    "persons_on_board": 3,
    "remarks": "Routine check",
    "takeoff_time_utc": "10:30:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user3",
  },
  "3": {
    "aircraft_registration": "OH-P28",
    "arrival_airport": "EFHK",
    "billable_member_id": 2,
    "billing_remarks": "N/A",
    "captain": "Järvinen",
    "copilot": "Heikkinen",
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user4",
    "departure_airport": "EFHK",
    "flight_date": "2025-03-03T22:00:00.000Z",
    "flight_id": 4,
    "flight_type": "Cargo",
    "fuel_uplift_litres": "55.00",
    "instrument_hours": "01:15:00",
    "invoice_number": "INV003",
    "is_billed": true,
    "landing_time_utc": "13:00:00",
    "night_hours": "01:00:00",
    "number_of_landings": 3,
    "off_block_time_utc": "11:15:00",
    "oil_uplift_litres": "1.20",
    "on_block_time_utc": "11:00:00",
    "persons_on_board": 5,
    "remarks": "Cargo delivery",
    "takeoff_time_utc": "11:30:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user4",
  },
  "4": {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFHK",
    "billable_member_id": 5,
    "billing_remarks": "N/A",
    "captain": "Korhonen",
    "copilot": null,
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user5",
    "departure_airport": "EFHK",
    "flight_date": "2025-03-04T22:00:00.000Z",
    "flight_id": 5,
    "flight_type": "Passenger",
    "fuel_uplift_litres": "70.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV004",
    "is_billed": true,
    "landing_time_utc": "14:00:00",
    "night_hours": "00:50:00",
    "number_of_landings": 2,
    "off_block_time_utc": "12:10:00",
    "oil_uplift_litres": "1.80",
    "on_block_time_utc": "12:00:00",
    "persons_on_board": 6,
    "remarks": "Passenger transport",
    "takeoff_time_utc": "12:20:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user5",
  },
  "created_at": Any<Date>,
  "updated_at": Any<Date>,
}
`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "0": {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": "2025-03-23T19:58:09.713Z",
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": "2025-02-28T22:00:00.000Z",
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": "2025-03-23T19:58:09.713Z",
    "updated_by": "user1",
  },
  "created_at": Any<Date>,
  "updated_at": Any<Date>,
}
`;
